<resources>
    <string name="app_name">YukaLike</string>
    <string name="signIn">Sign in</string>
    <string name="signGoogle">Sign in with Google</string>
    <string name="welcome">Welcome to YukaLike !</string>
    <string name="signUp">Sign up</string>
    <string name="noAccount">Don\'t have any account ?</string>
    <string name="labelEmail">Email</string>
    <string name="labelPassword">Password</string>
    <string name="scanButton">Scanner mon produit</string>
    <string name="orText">OU</string>
    <string name="validateBarCodeButton">Valider le code barre</string>
    <string name="scanWithCameraText">Scanner avec ma caméra</string>
    <string name="scanWithTextText">Entrer manuellement</string>
    <string name="fillInBarCode">Entrer le code bar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sugar">Sugar :</string>
    <string name="cals">Calories :</string>
    <string name="myEmail">My Email</string>
    <string name="Email">Email :</string>
    <string name="createUserButton">Create User</string>
    <string name="goToScan">Retour</string>
    <string name="myAccount">MY ACCOUNT</string>
    <string name="titleAccount">My account</string>
    <string name="points">Points YukaLike :</string>
    <string name="nextRank">Next rank soon !</string>
    <string name="createAccount">Create Account</string>
</resources>